fix post not shown on mobile issue

--- a/_sass/_common/components/post/post-meta.scss
+++ b/_sass/_common/components/post/post-meta.scss
@@ -43,7 +43,3 @@
     display: none;
   }
 }
-
-.posts-expand {
-  @include mobile() { display: none; }
-}
